--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "nodemon src/server.js",
     "start:dev": "nodemon src/server.js",
     "db:reset": "dropdb contacts_development; createdb contacts_development; npm run load_schema; npm run load_contacts",
     "load_schema": "psql -d contacts_development < src/models/db/schema/schema.sql",
@@ -17,10 +17,14 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.1",
+    "connect-pg-simple": "^4.2.1",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.6",
+    "express-validator": "^4.3.0",
     "method-override": "^2.3.10",
+    "passport": "^0.4.0",
     "pg-promise": "^6.2.1"
   },
   "devDependencies": {
